--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: base
       <div class="hero-small">
         <hr /><span>{{ site.data.constants.dates.start}} - {{ site.data.constants.dates.end}}, {{ site.data.constants.dates.year}}</span><hr />
       </div>
-      <div class="hero-big">Code<wbr><span class="hero-big-em">FOR</span><wbr>GOOD</div>
+      <div class="hero-big">PYTHON<wbr><span class="hero-big-em">FOR</span><wbr>GOOD</div>
       <div class="hero-normal">
         Dedicated to making the world <strong>gooder</strong>
       </div>
@@ -56,9 +56,9 @@ layout: base
               <img class="img-responsive" src="/assets/img/2016photo.jpg" alt="Code-for-good-2014" />
             </div>
             <div class="col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInRight" data-delay="500">
-              <h6>About Code for Good</h6>
+              <h6>About Python for Good</h6>
               <p>
-                Code for Good is an annual event based out of the Portland area
+                Python for Good is an annual event based out of the Portland area
                 where Python programmers from all over the globe get together for a
                 long weekend to build projects that help our communities. In 2017
                 the event will take place in Portland, OR, at <a
@@ -205,7 +205,7 @@ layout: base
   <div class="container">
     <div class="icon-wrap"><span class="icon icon-active icon-badges-votes-13"></span></div>
     <h3>Our Organizers</h3>
-    <div class="sub-title">The folks you can blame for Code for Good</div>
+    <div class="sub-title">The folks you can blame for Python for Good</div>
     <br />
     <br />
     <section class="row">
@@ -240,7 +240,7 @@ layout: base
   <div class="container">
     <div class="icon-wrap"><span class="icon icon-active icon-text-hierarchy-07"></span></div>
     <h3>Full schedule</h3>
-    <div class="sub-title">Shortest way to explore what will happen at Code for Good</div>
+    <div class="sub-title">Shortest way to explore what will happen at Python for Good</div>
     <br />
     <br />
     <section class="nav-tabs-default hidden-xs">
@@ -709,7 +709,7 @@ layout: base
                     </div>
                     <div class="panel-body">
                       <p>
-                      Like all great things, Code for Good will come to an end. We'll say goodbye to our new friends
+                      Like all great things, Python for Good will come to an end. We'll say goodbye to our new friends
                       and leave happy and better for the amazing experience we will all have just shared.
                       </p>
                     </div>
@@ -744,7 +744,7 @@ layout: base
   <div class="container">
     <div class="icon-wrap"><span class="icon icon-active icon-shopping-02"></span></div>
     <h3>Pricetable</h3>
-    <div class="sub-title">Shortest way to explore what will happen on Code for Good</div>
+    <div class="sub-title">Shortest way to explore what will happen on Python for Good</div>
     <br/>
     <br/>
     <div class="pricing-cols pricing-3-cols">
@@ -946,7 +946,7 @@ layout: base
         <!--
           The scholarship application window has closed. If you applied for a scholarship but haven't heard anything please <a href="mailto:{{ site.data.constants.contact_email }}?subject=Scholarship" ><font color="black">let us know!</font></a>
         -->
-        Code For Good is providing scholarship tickets to allow more people the opportunity to participate. The deadline to apply for a scholarship is July 15th and everyone who applies will be notified after the 20th of July. Click the link below to submit your request!
+        Python for Good is providing scholarship tickets to allow more people the opportunity to participate. The deadline to apply for a scholarship is July 15th and everyone who applies will be notified after the 20th of July. Click the link below to submit your request!
         <br/>
         <br/>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIXhQiosMNs0Yc4lXMsQB00NDPnjpelC-6IjBa87vXgBIYrg/closedform" class="btn btn-sm btn-primary">Apply for a Scholarship</a>
