--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: base
         <div class="tab-pane fade in active" id="aboutUs">
           <article class="row">
             <div class="col-md-5 col-sm-5 animated hiding" data-animation="fadeInLeft" data-delay="500">
-              <img class="img-responsive" src="/assets/img/2016photo.jpg" alt="Code-for-good-2014" />
+              <img class="img-responsive" src="/assets/img/codeforgood.jpeg" alt="Code-for-good-2014" />
             </div>
             <div class="col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInRight" data-delay="500">
               <h6>About Python for Good</h6>
