Update info for 2018

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: base
               <p>
                 Python for Good is an annual event based out of the Portland area
                 where Python programmers from all over the globe get together for a
-                long weekend to build projects that help our communities. In 2017
+                long weekend to build projects that help our communities. In 2018
                 the event will take place in Portland, OR, at <a
                 href="http://reed.edu/">Reed College</a>. Participants stay in
                 on-site dorms; hacking and socializing takes place in communal areas.
@@ -79,7 +79,7 @@ layout: base
             <div class="col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInRight" data-delay="500">
               <h6>Down to Business</h6>
               <p>
-                Projects in 2017 will be focused on issues facing our communities. We have some great projects lined up but we need more! We need YOU to help us find other great projects - suggest a project below! Project details, including available teams to join, will be announced to attendees around the beginning of July. Team leads will get information on projects at the end of May.
+                Projects in 2018 will be focused on issues facing families and children. We have some great projects lined up but we need more! We need YOU to help us find other great projects - suggest a project below! Project details, including available teams to join, will be announced to attendees around the beginning of July. Team leads will get information on projects at the end of May.
               </p>
 
                 <a class="btn btn-sm btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSeDhmp0I_qW08biCxt0uMwvAkWmLvwkWefZ4_Yt9NgEASKBrA/viewform">Suggest a Project</a>
