--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ layout: base
             What does it cost?
           </div>
           <p>
-          {{ site.data.constants.cost }} all-inclusive. Registration includes room, linens, pillows,
+          Early bird tickets are $200 all-inclusive. Registration includes room, linens, pillows,
           towels, swag, and three meals a day. We are a break-even operation; all funds go toward paying for the event!
           </p>
 
