--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@ layout: base
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-sm-7 animated hiding location" data-animation="fadeInLeft" data-delay="0">
-        <h3><a href="location">Location</a></h3>
+        <h3>Location</h3>
         <ul itemscope="" itemtype="http://schema.org/PostalAddress">
           <li itemprop="address"><i class="fa fa-map-marker highlight"></i>{{ site.data.constants.address }}</li>
           <li itemprop="email"><i class="fa fa-envelope highlight"></i>{{ site.data.constants.contact_email }}</li>
