--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@ layout: base
       </ul>
     </nav>
     <div class="hero-content text-center">
-      <div class="hero-small">
-        <hr /><span>{{ site.data.constants.dates.start}} - {{ site.data.constants.dates.end}}, {{ site.data.constants.dates.year}}</span><hr />
-      </div>
+        <div class="row">
+
+            <ul class="list-inline">
+              <li><a href="https://pdxcodeguild.com"><img class="img-responsive" src="assets/img/guild-logo.png" alt="codeguild"/></a></li>
+            </ul>
+        </div>
+        <div class="hero-small">
+            <hr /><span>Presents</span><hr />
+          </div>
       <div class="hero-big">PYTHON<wbr><span class="hero-big-em">FOR</span><wbr>GOOD</div>
       <div class="hero-normal">
         Dedicated to making the world <strong>gooder</strong>
